--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Goró</title>
-		<link rel="stylesheet" href="./src/css/index.css" />
-		<link rel="stylesheet" href="./src/css/popUp.css" />
+		<link rel="stylesheet" href="./assets/css/index.css" />
+		<link rel="stylesheet" href="./assets/css/popUp.css" />
 		<script
 			src="https://kit.fontawesome.com/8efdacdf0c.js"
 			crossorigin="anonymous"
@@ -19,7 +19,7 @@
 	<body>
 		<div id="container-pop-up">
 			<section class="pop-up">
-				<img src="./src/img/closePopUp.png" onclick="closePopUp()" />
+				<img src="./assets/img/closePopUp.png" onclick="closePopUp()" />
 				<h1 class="title-pop-up">VOCÊ TEM IDADE PARA TOMAR GORÓ?</h1>
 				<h4 class="text">CONFIRME A SUA IDADE</h4>
 				<div class="container-date">
@@ -191,7 +191,11 @@
 						<a class="nav--link" href="#info--menu">PORTFÓLIO</a>
 					</li>
 					<li>
-						<img alt="logo" src="./src/img/logo.png" class="logo" />
+						<img
+							alt="logo"
+							src="./assets/img/logo.png"
+							class="logo"
+						/>
 					</li>
 					<li>
 						<a class="nav--link" href="#about">SOBRE NÓS</a>
@@ -231,7 +235,7 @@
 					<div class="swiper-slide">
 						<div>
 							<img
-								src="./src/img/banner topo 1.png"
+								src="./assets/img/banner topo 1.png"
 								alt="banner"
 							/>
 						</div>
@@ -249,7 +253,7 @@
 					<div class="swiper-slide">
 						<div>
 							<img
-								src="./src/img/banner topo 1.png"
+								src="./assets/img/banner topo 1.png"
 								alt="banner"
 							/>
 						</div>
@@ -267,7 +271,7 @@
 					<div class="swiper-slide">
 						<div>
 							<img
-								src="./src/img/banner topo 1.png"
+								src="./assets/img/banner topo 1.png"
 								alt="banner"
 							/>
 						</div>
@@ -332,7 +336,7 @@
 				</p>
 				<img
 					alt="info 1"
-					src="./src/img/american pale ale.png"
+					src="./assets/img/american pale ale.png"
 					class="img--info"
 				/>
 			</div>
@@ -352,7 +356,7 @@
 				</p>
 				<img
 					alt="info 2"
-					src="./src/img/double.png"
+					src="./assets/img/double.png"
 					class="img--info"
 				/>
 			</div>
@@ -368,7 +372,11 @@
 					experiência de sabor mais suave e menos amarga além de
 					textura cremosa.
 				</p>
-				<img alt="info 3" src="./src/img/brown.png" class="img--info" />
+				<img
+					alt="info 3"
+					src="./assets/img/brown.png"
+					class="img--info"
+				/>
 			</div>
 		</section>
 
@@ -397,12 +405,12 @@
 							ultrices vel urna pharetra, consectetur aliquet
 							tellus.
 						</p>
-						<img alt="brindando" src="./src/img/image 6.png" />
+						<img alt="brindando" src="./assets/img/image 6.png" />
 					</div>
 					<div class="coluna">
 						<img
 							alt="dois caras contemplando cerveja"
-							src="./src/img/image 1.png"
+							src="./assets/img/image 1.png"
 						/>
 						<p>
 							Sed consequat odio at eros viverra, at ultricies
@@ -428,7 +436,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="./src/img/logo goro 1.png"
+						src="./assets/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -474,7 +482,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="./src/img/Instagram.png"
+										src="./assets/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -482,7 +490,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="./src/img/YouTube.png"
+										src="./assets/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -490,7 +498,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="./src/img/Facebook.png"
+										src="./assets/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
