--- a/pages/lists/listBeers/listBeer.html
+++ b/pages/lists/listBeers/listBeer.html
@@ -12,9 +12,9 @@
     />
     <link rel="stylesheet" href="./style.css" />
     <link href="./reset.css" rel="stylesheet" />
-    <link href="../../../src/css/cabecalho.css" rel="stylesheet" />
-    <link href="../../../src/css/footer.css" rel="stylesheet" />
-    <link href="../../../src/css/busca.css" rel="stylesheet" />
+    <link href="../../../assets/css/cabecalho.css" rel="stylesheet" />
+    <link href="../../../assets/css/footer.css" rel="stylesheet" />
+    <link href="../../../assets/css/busca.css" rel="stylesheet" />
     <script src="beers.js"></script>
     <title>Lista de Produtos - Cerveja</title>
   </head>
@@ -27,7 +27,7 @@
             ><img
               class="logo"
               alt="Logo Goró"
-              src="../../../src/img/logo goro 1.png"
+              src="../../../assets/img/logo goro 1.png"
             />
           </a>
           <ul class="menu__lista">
@@ -62,7 +62,7 @@
                 ><img
                   class="redes__logo"
                   alt="Login"
-                  src="../../../src/img/login.svg"
+                  src="../../../assets/img/login.svg"
                 />
                 LOGIN
               </a>
@@ -72,7 +72,7 @@
                 ><img
                   class="redes__logo"
                   alt="Carrinho"
-                  src="../../../src/img/carrinho.svg"
+                  src="../../../assets/img/carrinho.svg"
                 />
                 CARRINHO
               </a>
@@ -415,7 +415,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="../../../src/img/logo goro 1.png"
+						src="../../../assets/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -461,7 +461,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="../../../src/img/Instagram.png"
+										src="../../../assets/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -469,7 +469,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="../../../src/img/YouTube.png"
+										src="../../../assets/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -477,7 +477,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="../../../src/img/Facebook.png"
+										src="../../../assets/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
