--- a/pages/product/product.html
+++ b/pages/product/product.html
@@ -11,8 +11,8 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lato:wght@400;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link href="../../src/css/reset.css" rel="stylesheet" />
-		<link href="../../src/css/pagina-produto.css" rel="stylesheet" />
+		<link href="../../assets/css/reset.css" rel="stylesheet" />
+		<link href="../../assets/css/pagina-produto.css" rel="stylesheet" />
 		<script
 			src="https://kit.fontawesome.com/8efdacdf0c.js"
 			crossorigin="anonymous"
@@ -26,7 +26,7 @@
 					><img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</a>
 				<ul class="menu__lista">
@@ -61,7 +61,7 @@
 							><img
 								class="redes__logo"
 								alt="Login"
-								src="../../src/img/login.svg"
+								src="../../assets/img/login.svg"
 							/>
 							LOGIN
 						</a>
@@ -71,7 +71,7 @@
 							><img
 								class="redes__logo"
 								alt="Carrinho"
-								src="../../src/img/carrinho.svg"
+								src="../../assets/img/carrinho.svg"
 							/>
 							CARRINHO
 						</a>
@@ -102,26 +102,26 @@
 					<div id="produto-mini">
 						<img
 							alt="Pequeno 1"
-							src="../../src/img/brown.png"
-							onclick="changeImage('../../src/img/brown.png'); clickedImage('img-mini-1')"
+							src="../../assets/img/brown.png"
+							onclick="changeImage('../../assets/img/brown.png'); clickedImage('img-mini-1')"
 							id="img-mini-1"
 						/>
 						<img
 							alt="Pequeno 2"
-							src="../../src/img/double.png"
-							onclick="changeImage('../../src/img/double.png'); clickedImage('img-mini-2')"
+							src="../../assets/img/double.png"
+							onclick="changeImage('../../assets/img/double.png'); clickedImage('img-mini-2')"
 							id="img-mini-2"
 						/>
 						<img
 							alt="Pequeno 3"
-							src="../../src/img/american pale ale.png"
-							onclick="changeImage('../../src/img/american pale ale.png'); clickedImage('img-mini-3')"
+							src="../../assets/img/american pale ale.png"
+							onclick="changeImage('../../assets/img/american pale ale.png'); clickedImage('img-mini-3')"
 							id="img-mini-3"
 						/>
 					</div>
 					<img
 						alt="Imagem principal"
-						src="../../src/img/brown.png"
+						src="../../assets/img/brown.png"
 						id="display"
 					/>
 				</section>
@@ -147,27 +147,27 @@
 					<hr />
 					<div id="rating">
 						<img
-							src="../../src/img/star-active.png"
+							src="../../assets/img/star-active.png"
 							alt="star 1"
 							id="rating-1"
 						/>
 						<img
-							src="../../src/img/star.png"
+							src="../../assets/img/star.png"
 							alt="star 2"
 							id="rating-2"
 						/>
 						<img
-							src="../../src/img/star.png"
+							src="../../assets/img/star.png"
 							alt="star 3"
 							id="rating-3"
 						/>
 						<img
-							src="../../src/img/star.png"
+							src="../../assets/img/star.png"
 							alt="star 4"
 							id="rating-4"
 						/>
 						<img
-							src="../../src/img/star.png"
+							src="../../assets/img/star.png"
 							alt="star 5"
 							id="rating-5"
 						/>
@@ -207,11 +207,11 @@
 				<section class="comentario">
 					<h3>Nome Sobrenome</h3>
 					<div class="rating-user">
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
 					</div>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -223,52 +223,52 @@
 					<div class="rating-comentario">
 						<img
 							alt="thumbs up"
-							src="../../src/img/like-active.png"
+							src="../../assets/img/like-active.png"
 						/>
 						<div class="likes">1</div>
 						<img
 							alt="thumbs down"
-							src="../../src/img/dislike.png"
+							src="../../assets/img/dislike.png"
 						/>
 						<div class="dislikes"></div>
 					</div>
 					<h3>Nome Sobrenome</h3>
 					<div class="rating-user">
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
 					</div>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					</p>
 					<div class="rating-comentario">
-						<img alt="thumbs up" src="../../src/img/like.png" />
+						<img alt="thumbs up" src="../../assets/img/like.png" />
 						<div class="likes"></div>
 						<img
 							alt="thumbs down"
-							src="../../src/img/dislike-active.png"
+							src="../../assets/img/dislike-active.png"
 						/>
 						<div class="dislikes">1</div>
 					</div>
 					<h3>Nome Sobrenome</h3>
 					<div class="rating-user">
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
-						<img src="../../src/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
+						<img src="../../assets/img/star.png" />
 					</div>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					</p>
 					<div class="rating-comentario">
-						<img alt="thumbs up" src="../../src/img/like.png" />
+						<img alt="thumbs up" src="../../assets/img/like.png" />
 						<div class="likes"></div>
 						<img
 							alt="thumbs down"
-							src="../../src/img/dislike.png"
+							src="../../assets/img/dislike.png"
 						/>
 						<div class="dislikes"></div>
 					</div>
@@ -284,14 +284,14 @@
 							<div class="produto__img">
 								<img
 									class="foto"
-									src="../../src/img/PRODUTOSKIT 1.png"
+									src="../../assets/img/PRODUTOSKIT 1.png"
 									alt="banner"
 								/>
 								<div class="icone">
 									<a href="#"
 										><img
 											class="icone"
-											src="../../src/img/sacola.png"
+											src="../../assets/img/sacola.png"
 											alt="banner"
 									/></a>
 								</div>
@@ -310,14 +310,14 @@
 							<div class="produto__img">
 								<img
 									class="foto"
-									src="../../src/img/PRODUTOSKIT 1.png"
+									src="../../assets/img/PRODUTOSKIT 1.png"
 									alt="banner"
 								/>
 								<div class="icone">
 									<a href="#"
 										><img
 											class="icone"
-											src="../../src/img/sacola.png"
+											src="../../assets/img/sacola.png"
 											alt="banner"
 									/></a>
 								</div>
@@ -336,14 +336,14 @@
 							<div class="produto__img">
 								<img
 									class="foto"
-									src="../../src/img/PRODUTOSKIT 1.png"
+									src="../../assets/img/PRODUTOSKIT 1.png"
 									alt="banner"
 								/>
 								<div class="icone">
 									<a href="#"
 										><img
 											class="icone"
-											src="../../src/img/sacola.png"
+											src="../../assets/img/sacola.png"
 											alt="banner"
 									/></a>
 								</div>
@@ -362,14 +362,14 @@
 							<div class="produto__img">
 								<img
 									class="foto"
-									src="../../src/img/PRODUTOSKIT 1.png"
+									src="../../assets/img/PRODUTOSKIT 1.png"
 									alt="banner"
 								/>
 								<div class="icone">
 									<a href="#"
 										><img
 											class="icone"
-											src="../../src/img/sacola.png"
+											src="../../assets/img/sacola.png"
 											alt="banner"
 									/></a>
 								</div>
@@ -396,7 +396,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -442,7 +442,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="../../src/img/Instagram.png"
+										src="../../assets/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -450,7 +450,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="../../src/img/YouTube.png"
+										src="../../assets/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -458,7 +458,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="../../src/img/Facebook.png"
+										src="../../assets/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
