--- a/pages/shoppingCart/shoppingCart.html
+++ b/pages/shoppingCart/shoppingCart.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lato:wght@400;900&display=swap" rel="stylesheet"/>
-	<link href="../../src/css/pagina_de_carrinho.css" rel="stylesheet" />
-	<link rel="stylesheet" href="../../src/css/reset.css"/>
-	<link rel="stylesheet" href="../../src/css/header.css"/>
-	<link rel="stylesheet" href="../../src/css/footer.css"/>
+	<link href="../../assets/css/pagina_de_carrinho.css" rel="stylesheet" />
+	<link rel="stylesheet" href="../../assets/css/reset.css"/>
+	<link rel="stylesheet" href="../../assets/css/header.css"/>
+	<link rel="stylesheet" href="../../assets/css/footer.css"/>
     <title>Carrinho de compras</title>
 
 	<script
@@ -29,7 +29,7 @@
     
      <div class="menu">
 		<a class="menu__link" href="../homeStore/homeStore.html">
-			<img class="logo" alt="Logo Goró" src="../../src/img/logo goro 1.svg" >
+			<img class="logo" alt="Logo Goró" src="../../assets/img/logo goro 1.svg" >
 				</a>
 		<ul class="menu__lista">
 			<li class="menu__item">
@@ -46,12 +46,12 @@
 			<div>
 			<ul class="menu__profile">
 					<li class="log">
-					<img class="login" alt="login" src="../../src/img//profile.svg">
+					<img class="login" alt="login" src="../../assets/img//profile.svg">
 					<a class="login" href="../login/Login.html">LOGIN</a>
 					</li>
 
 					<li class="car">
-					<img class="carrinho" alt="carrinho" src="../../src/img//carrinho.svg">
+					<img class="carrinho" alt="carrinho" src="../../assets/img//carrinho.svg">
 					<a class="carrinho" href="../shoppingCart/shoppingCart.html">CARRINHO</a>
 					</li>
 					
@@ -68,7 +68,7 @@
 	<section class="carrinho_compra">
 		<div class="header_carrinho">
 			<div class="titulo_carrinho">
-				<img class="carrinho2" alt="carrinho" src="../../src/img/carrinho.svg">
+				<img class="carrinho2" alt="carrinho" src="../../assets/img/carrinho.svg">
 				<h1 class="titulos"> CARRINHO DE COMPRAS</h1>
 			</div>
 			<button class="botao_preto" type="button">CONTINUAR COMPRANDO</button>
@@ -214,7 +214,7 @@
 
 			<section class="frete">
 				<div class="titulo_frete">
-				<img class="caminhao" src="../../src/img/frete.svg">
+				<img class="caminhao" src="../../assets/img/frete.svg">
 				<h3 class="CEP">DIGITE O CEP DO ENDEREÇO DE ENTREGA</h3>
 				</div>
 				<div class="valor_frete">
@@ -246,7 +246,9 @@
 				<div class="alinhamento_botao">
 				<div></div>
 				<div>
+					<a href='../checkout/checkout.html'>
 					<button class="botao_amarelo" type="button">FINALIZAR COMPRA</button>
+				</a>
 				</div>
 			</div>
 			</div>
@@ -261,7 +263,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.svg"
+						src="../../assets/img/logo goro 1.svg"
 					/>
 				</div>
 
@@ -305,7 +307,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="../../src/img/Instagram - Negative.svg"
+										src="../../assets/img/Instagram - Negative.svg"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -313,7 +315,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="../../src/img/YouTube - Negative.svg"
+										src="../../assets/img/YouTube - Negative.svg"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -321,7 +323,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="../../src/img/Facebook - Negative.svg"
+										src="../../assets/img/Facebook - Negative.svg"
 								/></a>
 							</li>
 						</ul>
