--- a/pages/404/404.html
+++ b/pages/404/404.html
@@ -13,10 +13,10 @@
 		/>
 
 		<link rel="stylesheet" href="./style.css" />
-		<link href="../../src/css/cabecalho.css" rel="stylesheet" />
-		<link href="../../src/css/footer.css" rel="stylesheet" />
-		<link href="../../src/css/busca.css" rel="stylesheet" />
-		<link href="../../src/css/reset.css" rel="stylesheet" />
+		<link href="../../assets/css/cabecalho.css" rel="stylesheet" />
+		<link href="../../assets/css/footer.css" rel="stylesheet" />
+		<link href="../../assets/css/busca.css" rel="stylesheet" />
+		<link href="../../assets/css/reset.css" rel="stylesheet" />
 
 		<title>404</title>
 	</head>
@@ -27,7 +27,7 @@
 					><img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</a>
 				<ul class="menu__lista">
@@ -72,7 +72,7 @@
 							><img
 								class="redes__logo"
 								alt="Login"
-								src="../../src/img/login.svg"
+								src="../../assets/img/login.svg"
 							/>
 							LOGIN
 						</a>
@@ -86,7 +86,7 @@
 							><img
 								class="redes__logo"
 								alt="Carrinho"
-								src="../../src/img/carrinho.svg"
+								src="../../assets/img/carrinho.svg"
 							/>
 							CARRINHO
 						</a>
@@ -143,7 +143,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -189,7 +189,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="../../src/img/Instagram.png"
+										src="../../assets/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -197,7 +197,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="../../src/img/YouTube.png"
+										src="../../assets/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -205,7 +205,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="../../src/img/Facebook.png"
+										src="../../assets/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
