--- a/pages/homeStore/homeStore.html
+++ b/pages/homeStore/homeStore.html
@@ -15,13 +15,13 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
 		/>
-		<link href="../../src/css/reset.css" rel="stylesheet" />
-		<link href="../../src/css/cabecalho.css" rel="stylesheet" />
-		<link href="../../src/css/banner.css" rel="stylesheet" />
-		<link href="../../src/css/categoria.css" rel="stylesheet" />
-		<link href="../../src/css/produtos.css" rel="stylesheet" />
-		<link href="../../src/css/footer.css" rel="stylesheet" />
-		<link href="../../src/css/busca.css" rel="stylesheet" />
+		<link href="../../assets/css/reset.css" rel="stylesheet" />
+		<link href="../../assets/css/cabecalho.css" rel="stylesheet" />
+		<link href="../../assets/css/banner.css" rel="stylesheet" />
+		<link href="../../assets/css/categoria.css" rel="stylesheet" />
+		<link href="../../assets/css/produtos.css" rel="stylesheet" />
+		<link href="../../assets/css/footer.css" rel="stylesheet" />
+		<link href="../../assets/css/busca.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -31,7 +31,7 @@
 					><img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</a>
 				<ul class="menu__lista">
@@ -76,7 +76,7 @@
 							><img
 								class="redes__logo"
 								alt="Login"
-								src="../../src/img/login.svg"
+								src="../../assets/img/login.svg"
 							/>
 							LOGIN
 						</a>
@@ -90,7 +90,7 @@
 							><img
 								class="redes__logo"
 								alt="Carrinho"
-								src="../../src/img/carrinho.svg"
+								src="../../assets/img/carrinho.svg"
 							/>
 							CARRINHO
 						</a>
@@ -124,7 +124,7 @@
 					<div class="swiper-slide">
 						<div>
 							<img
-								src="../../src/img/banner goró 1.png"
+								src="../../assets/img/banner goró 1.png"
 								alt="banner"
 							/>
 						</div>
@@ -141,7 +141,7 @@
 					<div class="swiper-slide">
 						<div>
 							<img
-								src="../../src/img/banner goró 1.png"
+								src="../../assets/img/banner goró 1.png"
 								alt="banner"
 							/>
 						</div>
@@ -158,7 +158,7 @@
 					<div class="swiper-slide">
 						<div>
 							<img
-								src="../../src/img/banner goró 1.png"
+								src="../../assets/img/banner goró 1.png"
 								alt="banner"
 							/>
 						</div>
@@ -194,21 +194,21 @@
 					href="../lists/listBeers/listBeer.html"
 					class="categoria__amarelo"
 				>
-					<img src="../../src/img/Group 4.svg" />
+					<img src="../../assets/img/Group 4.svg" />
 					<h4>CERVEJA</h4>
 				</a>
 				<a
 					href="../lists/listAcessories/index.html"
 					class="categoria__preto"
 				>
-					<img src="../../src/img/Vector.svg" />
+					<img src="../../assets/img/Vector.svg" />
 					<h4>ACESSÓRIOS</h4>
 				</a>
 				<a
 					href="../lists/listKits/index.html"
 					class="categoria__vermelho"
 				>
-					<img src="../../src/img/Vector_.svg" />
+					<img src="../../assets/img/Vector_.svg" />
 					<h4>KITS</h4>
 				</a>
 			</div>
@@ -222,14 +222,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -246,14 +246,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -270,14 +270,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -294,14 +294,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -318,14 +318,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -342,14 +342,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -366,14 +366,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -390,14 +390,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -414,14 +414,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -438,14 +438,14 @@
 						<div class="produto__img">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="banner"
 							/>
 							<div class="icone">
 								<a href="#"
 									><img
 										class="icone"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="banner"
 								/></a>
 							</div>
@@ -472,7 +472,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -518,7 +518,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="../../src/img/Instagram.png"
+										src="../../assets/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -526,7 +526,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="../../src/img/YouTube.png"
+										src="../../assets/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -534,7 +534,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="../../src/img/Facebook.png"
+										src="../../assets/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
