--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -11,11 +11,10 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Lato:wght@400;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="../../src/css/style_Result_Busca.css" />
-		<link href="../../src/css/cabecalho.css" rel="stylesheet" />
-		<link href="../../src/css/footer.css" rel="stylesheet" />
-		<link href="../../src/css/busca.css" rel="stylesheet" />
-
+		<link rel="stylesheet" href="../../assets/css/style_Result_Busca.css" />
+		<link href="../../assets/css/cabecalho.css" rel="stylesheet" />
+		<link href="../../assets/css/footer.css" rel="stylesheet" />
+		<link href="../../assets/css/busca.css" rel="stylesheet" />
 
 		<title>Lista de produtos - resultado de busca</title>
 	</head>
@@ -27,7 +26,7 @@
 					><img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</a>
 				<ul class="menu__lista">
@@ -42,8 +41,8 @@
 					</li>
 					<li id="menuTwo" class="menu__item">
 						<a
-						onmouseover="mouseOverMenuTwo()"
-						onmouseout="mouseOutMenuTwo()"
+							onmouseover="mouseOverMenuTwo()"
+							onmouseout="mouseOutMenuTwo()"
 							class="menu__linka"
 							href="../lists/listAcessories/index.html"
 							>ACESSÓRIOS</a
@@ -64,28 +63,29 @@
 			<nav class="redes">
 				<ul class="menu__lista">
 					<li id="menuFour" class="menu__item">
-						
-						<a 
-						onmouseover="mouseOverMenuFour()"
-						onmouseout="mouseOutMenuFour()"
-						class="menu__link" href="../login/Login.html"
+						<a
+							onmouseover="mouseOverMenuFour()"
+							onmouseout="mouseOutMenuFour()"
+							class="menu__link"
+							href="../login/Login.html"
 							><img
 								class="redes__logo"
 								alt="Login"
-								src="../../src/img/login.svg"
+								src="../../assets/img/login.svg"
 							/>
 							LOGIN
 						</a>
 					</li>
 					<li id="menuFive" class="menu__item">
 						<a
-						onmouseover="mouseOverMenuFive()"
-						onmouseout="mouseOutMenuFive()"
-						class="menu__link" href="../signUp/signUp.html"
+							onmouseover="mouseOverMenuFive()"
+							onmouseout="mouseOutMenuFive()"
+							class="menu__link"
+							href="../signUp/signUp.html"
 							><img
 								class="redes__logo"
 								alt="Carrinho"
-								src="../../src/img/carrinho.svg"
+								src="../../assets/img/carrinho.svg"
 							/>
 							CARRINHO
 						</a>
@@ -221,16 +221,16 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
-								onclick="changeImage('../../src/img/PRODUTOSKIT 1.png'); clickedImage('img-cerveja01')"
-								id ='img-cerveja01'
+								onclick="changeImage('../../assets/img/PRODUTOSKIT 1.png'); clickedImage('img-cerveja01')"
+								id="img-cerveja01"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -244,14 +244,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -265,14 +265,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -286,14 +286,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -306,14 +306,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -326,14 +326,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -346,14 +346,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -366,14 +366,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -386,14 +386,14 @@
 						<div class="item-cerveja">
 							<img
 								class="foto"
-								src="../../src/img/PRODUTOSKIT 1.png"
+								src="../../assets/img/PRODUTOSKIT 1.png"
 								alt="imagem-cerveja"
 							/>
 							<div class="item-sacola">
 								<a href="../shoppingCart/shoppingCart.html">
 									<img
 										class="sacola"
-										src="../../src/img/sacola.png"
+										src="../../assets/img/sacola.png"
 										alt="imagem-sacola"
 									/>
 								</a>
@@ -425,7 +425,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -471,7 +471,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="../../src/img/Instagram.png"
+										src="../../assets/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -479,7 +479,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="../../src/img/YouTube.png"
+										src="../../assets/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -487,7 +487,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="../../src/img/Facebook.png"
+										src="../../assets/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
