--- a/pages/signUp/signUp.html
+++ b/pages/signUp/signUp.html
@@ -15,12 +15,12 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
 		/>
-		<link href="../../src/css/reset.css" rel="stylesheet" />
-		<link href="../../src/css/cabecalho.css" rel="stylesheet" />
-		<link href="../../src/css/banner.css" rel="stylesheet" />
-		<link href="../../src/css/footer.css" rel="stylesheet" />
-		<link href="../../src/css/busca.css" rel="stylesheet" />
-		<link href="../../src/css/cadastro.css" rel="stylesheet" />
+		<link href="../../assets/css/reset.css" rel="stylesheet" />
+		<link href="../../assets/css/cabecalho.css" rel="stylesheet" />
+		<link href="../../assets/css/banner.css" rel="stylesheet" />
+		<link href="../../assets/css/footer.css" rel="stylesheet" />
+		<link href="../../assets/css/busca.css" rel="stylesheet" />
+		<link href="../../assets/css/cadastro.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -30,7 +30,7 @@
 					><img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</a>
 				<ul class="menu__lista">
@@ -65,7 +65,7 @@
 							><img
 								class="redes__logo"
 								alt="Login"
-								src="../../src/img/login.svg"
+								src="../../assets/img/login.svg"
 							/>
 							LOGIN
 						</a>
@@ -77,7 +77,7 @@
 							><img
 								class="redes__logo"
 								alt="Carrinho"
-								src="../../src/img/carrinho.svg"
+								src="../../assets/img/carrinho.svg"
 							/>
 							CARRINHO
 						</a>
@@ -105,7 +105,7 @@
 		<section class="section__cadastro">
 			<div class="cadastro">
 				<div class="cadastro__titulo">
-					<img src="../../src/img/login_cadastro.svg" />
+					<img src="../../assets/img/login_cadastro.svg" />
 					<h3>DADOS PESSOAIS</h3>
 				</div>
 
@@ -156,7 +156,7 @@
 		<section class="section__cadastro">
 			<div class="cadastro">
 				<div class="cadastro__titulo">
-					<img src="../../src/img/cadeado.svg" />
+					<img src="../../assets/img/cadeado.svg" />
 					<h3>DADOS DE LOGIN</h3>
 				</div>
 
@@ -188,7 +188,7 @@
 		<section class="section__cadastro" style="margin-bottom: 4.5rem">
 			<div class="cadastro">
 				<div class="cadastro__titulo">
-					<img src="../../src/img/casa.svg" />
+					<img src="../../assets/img/casa.svg" />
 					<h3>DADOS DE ENDEREÇO</h3>
 				</div>
 
@@ -211,7 +211,9 @@
 				<div class="teste">
 					<input type="cidade" placeholder="Cidade" />
 					<select id="state">
-						<option class="select" disabled selected hidden>Selecione seu estado</option>
+						<option class="select" disabled selected hidden>
+							Selecione seu estado
+						</option>
 					</select>
 				</div>
 				<div class="teste">
@@ -253,7 +255,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="../../src/img/logo goro 1.png"
+						src="../../assets/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -297,7 +299,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="../../src/img/Instagram.png"
+										src="../../assets/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -305,7 +307,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="../../src/img/YouTube.png"
+										src="../../assets/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -313,7 +315,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="../../src/img/Facebook.png"
+										src="../../assets/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
